# news-aggregator

./: .gitignore  LICENSE
backend/: dev.env  pyproject.toml
frontend/: pyproject.toml
frontend/src/: main.py
