[tool.poetry]
name = "news-aggregator-backend"
version = "0.1.0"
description = "This is the backend for the news aggregator application"
authors = ["Mike Nemke <mike@dangdata.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
